# infoblox-ddi-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  mcp_intent.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
examples/: anthropic_sdk.py  curl_test.sh  langchain_example.py  openai_agents.py
services/: atcfw_client.py  infoblox_client.py  insights_client.py  metrics.py
tests/: conftest.py  test_resolvers.py  test_resources.py  test_tools.py  test_validation.py
