[project]
name = "infoblox-ddi-mcp"
version = "1.0.0"
description = "Infoblox DDI MCP Server — 20 intent-level workflow tools for agentic AI integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Igor Racic" },
]
keywords = ["infoblox", "ddi", "mcp", "ai", "llm", "dns", "dhcp", "ipam"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Networking",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastmcp>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "cachetools>=5.3.0",
    "pybreaker>=1.0.0",
]

[project.scripts]
infoblox-ddi-mcp = "mcp_intent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services"]
include = ["mcp_intent.py", "services/"]

[tool.uv]
dev-dependencies = []
