[project]
name = "infoblox-ddi-mcp"
version = "1.1.1"
description = "Infoblox DDI MCP Server — 20 intent-level workflow tools for agentic AI integration"
readme = "README.md"
license = "MIT OR Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Igor Racic" },
]
keywords = ["infoblox", "ddi", "mcp", "ai", "llm", "dns", "dhcp", "ipam"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Networking",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastmcp>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "cachetools>=5.3.0",
    "pybreaker>=1.0.0",
]

[project.scripts]
infoblox-ddi-mcp = "mcp_intent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services"]
include = ["mcp_intent.py", "services/"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8", "pre-commit>=4.0"]

[project.optional-dependencies]
otel = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20", "opentelemetry-exporter-otlp>=1.20"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "S"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"mcp_intent.py" = ["E402", "S104", "S110"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
